Final stuff, bug checking and squashing.

--- a/static/css/hangouts.css
+++ b/static/css/hangouts.css
@@ -15,17 +15,44 @@ body {
     padding: 0;
 }
 
+html {
+    background-color: var(--background-color)
+}
+
 .page-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    height: 100%;
+    min-height: 100%;
     background-color: var(--background-color);
 }
 
-h1 {
-    font-size: 300%;
+header {
+    text-align: center;
+    font-family: "DM Serif Display", serif;
+    color: var(--accent-color);
+    font-size: 200%;
+    font-weight: 300;
+    text-decoration: none;
+}
+
+header a {
+    text-decoration: none;
+    color: var(--accent-color);
+}
+
+header a:hover {
+    color: var(--accent-color-dark);
+}
+
+header h1 {
+    margin-top: 10px;
+}
+.page-title {
+    font-size: 250%;
+    margin-bottom: 30px;
+    color: var(--accent-color-dark)
 }
 
 .new_hangout-container {
@@ -172,12 +199,6 @@ h1 {
     height: 100%;
     background-color: var(--background-color);
     padding: 20px;
-}
-
-h1 {
-    font-size: 250%;
-    margin-bottom: 30px;
-    color: var(--accent-color-dark)
 }
 
 .hangout_feed-header h3 {
