--- a/static/css/memories.css
+++ b/static/css/memories.css
@@ -20,14 +20,43 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    height: 100%;
+    min-height: 100vh;
     background-color: var(--background-color);
     padding: 20px;
 }
 
-h1 {
+header {
+    text-align: center;
+    font-family: "DM Serif Display", serif;
+    color: var(--accent-color);
+    font-size: 200%;
+    font-weight: 400;
+    text-decoration: none;
+}
+
+header a {
+    text-decoration: none;
+    color: var(--accent-color);
+}
+
+header a:hover {
+    color: var(--accent-color-dark);
+}
+
+header h1 {
+    margin-top: 10px;
+}
+
+.page-title {
     font-size: 250%;
     margin-bottom: 30px;
+    color: var(--accent-color-dark)
+}
+
+h2 {
+    font-size: 225%;
+    margin-bottom: 30px;
+    color: var(--accent-color);
 }
 
 .memories-container {
@@ -57,12 +86,10 @@ h1 {
     display: flex;
     flex-direction: column;
     background-color: #fff;
-    border: 1px solid var(--accent-color);
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     padding: 10px;
-    margin: 10px 0;
+    margin: 10px;
     width: 100%;
-    max-width: 600px;
     box-sizing: border-box;
 }
 
@@ -126,7 +153,7 @@ form label {
     display: flex;
     justify-content: center;
     color: white;
-    background-color: var(--accent-colorcolor);
+    background-color: var(--accent-color);
     width: 100%;
     height: 100%;
     text-align: center;
@@ -151,6 +178,8 @@ form textarea {
     border: none;
     box-sizing: border-box;
     resize: none;
+    font-size: 100%;
+    font-family: helvetica;
 }
 
 form input[type="file"] {
@@ -158,7 +187,7 @@ form input[type="file"] {
 }
 
 .submit_form-button {
-    padding: 10px;
+    padding: 20px 30px;
     background-color: var(--accent-color);
     color: white;
     border: none;
@@ -167,6 +196,7 @@ form input[type="file"] {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     align-self: center;
     margin-top: 50px;
+    font-size: 90%
 }
 
 form button:hover {
