--- a/static/css/view_hangout.css
+++ b/static/css/view_hangout.css
@@ -25,9 +25,32 @@ body {
     padding: 20px;
 }
 
-h1 {
-    font-size: 300%;
-    margin-bottom: 20px;
+header {
+    text-align: center;
+    font-family: "DM Serif Display", serif;
+    color: var(--accent-color);
+    font-size: 200%;
+    font-weight: 400;
+    text-decoration: none;
+}
+
+header a {
+    text-decoration: none;
+    color: var(--accent-color);
+}
+
+header a:hover {
+    color: var(--accent-color-dark);
+}
+
+header h1 {
+    margin-top: 10px;
+}
+
+.page-title {
+    font-size: 250%;
+    margin-bottom: 30px;
+    color: var(--accent-color-dark)
 }
 
 .hangout-container {
